# crackornot

./: .gitignore  README.md  flake.nix  pyproject.toml
src/crackornot/: __init__.py  main.py
src/hello_world/: __init__.py
templates/: index.html  report.html  todos.html
tests/: test_app.py  test_hello_world.py
