[project]
name = "crackornot"
version = "0.1.0"
description = "A simple hello world example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27.1"
]

[project.scripts]
hello = "crackornot:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "httpx>=0.27.0",
]

# Add this section to include all Python files
[tool.hatch.build.targets.wheel]
packages = ["src/crackornot"] 
